[package]
name = "list_set"
version = "0.2.1"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2021"
description = """\
    A crate that provides a data structure for compactly storing multiple \ 
    linked lists with O(1) allocations in adjacency list-based scene graphs \
    with high cache coherence.
"""
license = "MIT OR Apache-2.0"

[lib]
name = "list_set"
path = "src/lib.rs"

[dependencies.fnv]
path = "rust-fnv"
version = "1.0.7"

